# sharp-tail

./: .env.example  .gitignore  .ralphrc  README.md  generate_report.py  pyproject.toml  run_live.py
.ralph/: .loop_start_sha  PROMPT.md  fix_plan.md  progress.json
.ralph/specs/: polymarket_wallet_mirror_spec.md
scripts/: generate_report.py
src/polymir/: __init__.py  __main__.py  cli.py  config.py  db.py  executor.py  live_client.py  logging.py  models.py  monitor.py  scanner.py
src/polymir/api/: __init__.py  clob.py  gamma.py  rate_limiter.py  websocket.py
src/polymir/backtest/: __init__.py  bias_tests.py  data.py  engine.py  metrics.py  report.py  sweep.py  validation.py
src/polymir/data/: __init__.py  collector.py
src/polymir/research/: __init__.py  engine.py  models.py  pdf_report.py  pipeline.py  report.py  strategy_base.py  validation.py
src/polymir/research/strategies/: __init__.py  s1_favorite_longshot.py  s2_multi_outcome_arb.py  s3_volume_momentum.py  s4_cross_market_cascade.py  s5_spread_capture.py  s6_theta_harvesting.py  s7_external_divergence.py
tests/: conftest.py  test_api_client.py  test_backtest.py  test_bias.py  test_bugfixes.py  test_db.py  test_executor.py  test_integration.py  test_models.py  test_report.py  test_research.py  test_scanner.py  test_sweep.py  test_validation.py
