[project]
name = "polymir"
version = "0.1.0"
description = "Polymarket wallet mirror trading system"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "aiosqlite>=0.19,<1",
    "pydantic>=2.5,<3",
    "structlog>=24.1,<25",
    "tenacity>=8.2,<9",
    "websockets>=12,<14",
    "click>=8.1,<9",
    "tomli>=2.0,<3; python_version < '3.12'",
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "pandas>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4,<6",
    "aioresponses>=0.7,<1",
    "ruff>=0.3,<1",
]

[project.scripts]
polymir = "polymir.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymir"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services",
]

[tool.ruff]
target-version = "py311"
line-length = 100
